force-app/main/default/objects/CRMforNonProfit__CRMforNonProfit_TransactionLineItem__c/CRMforNonProfit__CRMforNonProfit_TransactionLineItem__c.object-meta.xml
<CustomObject>
    <description>To hold products from eshop</description>
    <label>TransactionLineItem</label>
    <nameField>
        <label>CRMforNonProfit__TransactionLineItem Nam</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TransactionLineItems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>