force-app/main/default/objects/CRMforNonProfit__CRMforNonProfit_TransactionLineItem__c/fields/CRMforNonProfit__Price__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Price__c</fullName>
    <description>Price from eshop Order</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>