force-app/main/default/objects/CRMforNonProfit__CRMforNonProfit_TransactionLineItem__c/fields/CRMforNonProfit__Product2Lookup__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Product2Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product2Lookup</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>CRMforNonProfit_TransactionLineItems</relationshipName>
    <type>Lookup</type>
</CustomField>