force-app/main/default/objects/CRMforNonProfit__CRMforNonProfit_TransactionLineItem__c/fields/CRMforNonProfit__Quantity__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__Quantity__c</fullName>
    <description>Quantity from eshop Order</description>
    <inlineHelpText>Quantity from eshop Order</inlineHelpText>
    <label>Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>