force-app/main/default/objects/CRMforNonProfit__CRMforNonProfit_TransactionLineItem__c/fields/CRMforNonProfit__TransactionLookup__c.field-meta.xml
<CustomField>
    <fullName>CRMforNonProfit__TransactionLookup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>TransactionLookup</label>
    <referenceTo>CRMforNonProfit__Transaction__c</referenceTo>
    <relationshipName>CRMforNonProfit_TransactionLineItems</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>